Closed Bug 826195 Opened 13 years ago Closed 13 years ago

When leaving print preview: "ASSERTION: print object has mismatching pres shell and pres context: 'false', file /mozilla/layout/printing/nsPrintData.cpp, line 108" followed by "ASSERTION: mPresShell->GetPresShell() is null"

Categories

(Core :: Print Preview, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla20

People

(Reporter: dholbert, Assigned: heycam)

References

Details

(Keywords: assertion)

Attachments

(1 file)

STR: 0. Be using a debug build 1. Visit about:blank (or perhaps any site...?) 2. File | Print Preview (on Linux / Windows) 3. Click "close" button ACTUAL RESULTS: ###!!! ASSERTION: print object has mismatching pres shell and pres context: 'false', file /mozilla/layout/printing/nsPrintData.cpp, line 108 ###!!! ASSERTION: mPresShell->GetPresShell() is null: 'false', file /mozilla/layout/printing/nsPrintData.cpp, line 111 I hit this using a debug build from up-to-date mozilla-central, from this cset: https://hg.mozilla.org/mozilla-central/rev/6955309291ee
Actually, looks like these assertions were just added, in bug 818626's cset: https://hg.mozilla.org/mozilla-central/rev/28f9ce570aa1 I can reproduce this in the earliest m-c-debug nightly to include that patch... https://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/2013/01/2013-01-02-mozilla-central-debug/ ...so I think this has just been broken since bug 818626 landed.
Attached patch patchSplinter Review
Tweak assertion. Turns out it is valid for the nsPresContext to no longer have a reference to the PresShell, as long as Destroy() has already been called on the PresShell (as far as I can tell). I'll assert that over in bug 818626.
Assignee: nobody → cam
Status: NEW → ASSIGNED
Attachment #697823 - Flags: review?(dholbert)
Comment on attachment 697823 [details] [diff] [review] patch Looks like this addresses the first assertion-failure, but not the second one ("mPresShell->GetPresShell() is null") It sounds like we might just want to drop that second assertion, based on comment 2...? r=me with that, or something like it. (The assertion message also needs s/mPresShell/mPresContext/, if we happen to keep it. :))
Attachment #697823 - Flags: review?(dholbert) → review+
Thanks, removed that other assertion entirely. https://hg.mozilla.org/integration/mozilla-inbound/rev/9e624b73a293
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla20
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: