Bug 826195 - Tweak nsPrintObject sanity assertions. r=dholbert